--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -21,5 +21,13 @@
   <p>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
   </p>
+    <p>
+    <button ion-button color="primary"  (click)='displayMsn()'>show log</button>
+  </p>
+
+  <p>
+    <button ion-button color="primary"  (click)="exitApp()">kill apps</button>
+  </p>
+
 
 </ion-content>
